<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="prompt_info_title">Chat App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">Chat App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">biometric_chat_encryption_key</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="phone_number_email_or_username">phone number, email, or username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="authorize">Authorize</string>
    <string name="use_biometrics">Use biometrics</string>
</resources>